# my_tasks

./: .gitignore  README.md  pyproject.toml
favorite_tasks/: pascal_triangle.py
favorite_tasks/recursion/: factorial.py
features/: __init__.py  url_parsing.py
features/decorators/: __init__.py  execute_time.py
features/sorts/: merge_sort.py
python/: pyproject.toml
python/favorite_tasks/: pascal_triangle.py
python/favorite_tasks/functional/: factorial.py
python/favorite_tasks/recursion/: binary_system.py  fibonacci.py  line_list.py  matryoshka.py  nod_evklid.py
python/features/: url_parsing.py
python/features/decorators/: execute_time.py
python/features/sorts/: bubble_sort.py
test_tasks/: library.py
test_tasks/interview/: 1.py
test_tasks/juniorsInterview/task1/: solution.py  test.py
test_tasks/juniorsInterview/task2/: beasts.csv  solution.py
test_tasks/juniorsInterview/task3/: solution.py
