[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Pavel Melnikov <room.apps@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pretty-errors = "^1.2.25"
isort = "^5.13.2"
rich = "^13.7.0"
icecream = "^2.1.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

